# graph-api

./: .gitmodules  BaseGraph.cpp  BaseGraph.h  CMakeLists.txt  Doxyfile  Edge.cpp  Edge.h  GraphStructure.h  Node.cpp  Node.h  README.md  SpuUltraGraph.cpp  SpuUltraGraph.h  SpuUltraGraphAdapter.h  SpuUltraGraphProperty.h  StructureDecorator.h  StructureIterator.h  UltraGraphConcepts.h  exceptions.h  main.cpp  types.h  utils.cpp  utils.h
docs/: Графовые модели.md  Листы.vsdx
doxygen/html/: _graph_performance_test_8h_source.html  _graph_structure_8h_source.html  _spu_ultra_graph_8h_source.html  _spu_ultra_graph_adapter_8h_source.html  _spu_ultra_graph_property_8h_source.html  _structure_iterator_8h_source.html  _ultra_graph_concepts_8h_source.html  abstract__fields_8hpp_source.html  abstract__structure_8hpp_source.html  annotated.html  base__structure_8hpp_source.html  class_bad_request-members.html  class_bad_request.html  class_command_overflow_error-members.html  class_command_overflow_error.html  class_conflict-members.html  class_conflict.html  class_graph_performance_test-members.html  class_graph_performance_test.html  class_insufficient_storage-members.html  class_insufficient_storage.html  class_not_found-members.html  class_not_found.html  class_queue_error-members.html  class_queue_error.html  class_s_p_u_1_1_abstract_fields-members.html  class_s_p_u_1_1_abstract_fields.html  class_s_p_u_1_1_abstract_fields_3_01void_01_4-members.html  class_s_p_u_1_1_abstract_fields_3_01void_01_4.html  class_s_p_u_1_1_abstract_structure-members.html  class_s_p_u_1_1_abstract_structure.html  class_s_p_u_1_1_base_extern_value-members.html  class_s_p_u_1_1_base_extern_value.html  class_s_p_u_1_1_base_structure-members.html  class_s_p_u_1_1_base_structure.html  class_s_p_u_1_1_extern_value-members.html  class_s_p_u_1_1_extern_value.html  class_s_p_u_1_1_fields-members.html  class_s_p_u_1_1_fields.html  class_s_p_u_1_1_fields_3_01void_01_4-members.html  (+197 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  (+67 more)
doxygen/latex/: annotated.tex  class_bad_request.eps  class_bad_request.tex  class_command_overflow_error.eps  class_command_overflow_error.tex  class_conflict.eps  class_conflict.tex  class_graph_performance_test.tex  class_insufficient_storage.eps  class_insufficient_storage.tex  class_not_found.eps  class_not_found.tex  class_queue_error.eps  class_queue_error.tex  class_s_p_u_1_1_abstract_fields.eps  class_s_p_u_1_1_abstract_fields.tex  class_s_p_u_1_1_abstract_fields_3_01void_01_4.eps  class_s_p_u_1_1_abstract_fields_3_01void_01_4.tex  class_s_p_u_1_1_abstract_structure.eps  class_s_p_u_1_1_abstract_structure.tex  class_s_p_u_1_1_base_extern_value.eps  class_s_p_u_1_1_base_extern_value.tex  class_s_p_u_1_1_base_structure.eps  class_s_p_u_1_1_base_structure.tex  class_s_p_u_1_1_extern_value.eps  class_s_p_u_1_1_extern_value.tex  class_s_p_u_1_1_fields.eps  class_s_p_u_1_1_fields.tex  class_s_p_u_1_1_fields_3_01void_01_4.eps  class_s_p_u_1_1_fields_3_01void_01_4.tex  class_s_p_u_1_1_fields_container.tex  class_s_p_u_1_1_fields_data.eps  class_s_p_u_1_1_fields_data.tex  class_s_p_u_1_1_fields_data_3_01void_01_4.tex  class_s_p_u_1_1_fields_length.eps  class_s_p_u_1_1_fields_length.tex  class_s_p_u_1_1_fields_length_3_01void_01_4.tex  class_s_p_u_1_1_fields_pointer.eps  class_s_p_u_1_1_fields_pointer.tex  class_s_p_u_1_1_fields_pointer_3_01void_01_4.eps  (+91 more)
examples/: boost_example.cpp  dijkstra_example.cpp  graph_api_example.cpp  graphvis_example.cpp  main.cpp
graph/: AbstractGraph.cpp  AbstractGraph.h  Edge.h  Node.h
graphs/: types.h
graphs/graph/: Edge.h  Graph.cpp  Graph.h  GraphApi.cpp  GraphApi.h  Node.cpp  Node.h
performance_tests/: GraphPerformanceTest.cpp  GraphPerformanceTest.h  breadth_first.cpp  depth_first.cpp  dijkstra.cpp  kruskal.cpp  utils.h
tests/: graph_test.h  main.cpp  test_boost_spu_ultra_graph.cpp  test_data_container_operators.cpp  test_spu_api.cpp  test_spu_structure_iterator.cpp  test_spu_ultra_graph.cpp
